[gd_scene load_steps=26 format=3 uid="uid://bh3bmcratw025"]

[ext_resource type="Script" uid="uid://d3mw66c4x3kum" path="res://ui/story/map/story_map_scene.gd" id="1_5v7n8"]
[ext_resource type="Theme" uid="uid://ddklgnmfj25sv" path="res://ui/story/story_theme.tres" id="1_nmkcg"]
[ext_resource type="PackedScene" uid="uid://bch6pb81vhwb" path="res://ui/story/map/story_level_node.tscn" id="2_udjio"]
[ext_resource type="PackedScene" uid="uid://cs37yf58hf3tp" path="res://ui/story/map/story_level_edge.tscn" id="3_4e1f5"]
[ext_resource type="PackedScene" uid="uid://ya2fn3ef1h2j" path="res://ui/story/map/story_level_node_unknown.tscn" id="4_cestf"]
[ext_resource type="Material" uid="uid://bigbcyue3woos" path="res://ui/story/map/materials/grayscale_material.tres" id="5_8dcih"]
[ext_resource type="Script" uid="uid://df7r7bwm230pa" path="res://ui/array_seq_view_hide.gd" id="6_8dcih"]
[ext_resource type="Script" uid="uid://ceao0gocc6tih" path="res://utils/mouse_follower.gd" id="7_464bj"]
[ext_resource type="PackedScene" uid="uid://8hat5mrejfwr" path="res://ui/story/round_summary/round_summary_hud_element.tscn" id="7_b87u6"]
[ext_resource type="PackedScene" uid="uid://b4hy7hmnoewje" path="res://narrative/auto_narrative.tscn" id="7_mer82"]
[ext_resource type="Texture2D" uid="uid://csaq0u25lccwx" path="res://ui/story/map/grid_tile.png" id="7_px7av"]
[ext_resource type="PackedScene" uid="uid://bqfcd8w6wtoo0" path="res://utils/pulse_modulate.tscn" id="7_y8rqc"]
[ext_resource type="Texture2D" uid="uid://d4l0fjsjek7l8" path="res://ui/hud_bg_topright.png" id="9_jpvwg"]
[ext_resource type="Theme" uid="uid://djf2yc1tmc0u8" path="res://ui/themes/control_theme_main_menu.tres" id="10_eclf1"]
[ext_resource type="FontFile" uid="uid://cg5hjbm350ehu" path="res://ui/typewriter_font.fnt" id="10_h2lnq"]
[ext_resource type="PackedScene" uid="uid://dk3gncj3bxnyj" path="res://ui/apply_typewriter_effect.tscn" id="12_5yfjk"]
[ext_resource type="AudioStream" uid="uid://cudd5extbrrsl" path="res://ui/sounds/chatty_signal_short_b.wav" id="13_2etp1"]
[ext_resource type="PackedScene" uid="uid://dqkfnyd4k7b7t" path="res://ui/story/run_count_label.tscn" id="16_8olf0"]

[sub_resource type="Gradient" id="Gradient_jpvwg"]
interpolation_mode = 2
interpolation_color_space = 1
colors = PackedColorArray(0.423381, 0.460071, 0.475623, 1, 0.841941, 0.86221, 0.873903, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_464bj"]
gradient = SubResource("Gradient_jpvwg")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.625, 0.125)
repeat = 2

[sub_resource type="Gradient" id="Gradient_y8rqc"]
interpolation_color_space = 1
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2etp1"]
gradient = SubResource("Gradient_y8rqc")
width = 512
height = 512
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.85, 0.15)

[sub_resource type="LabelSettings" id="LabelSettings_eclf1"]
line_spacing = -3.0
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.85098)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8rqc"]
texture = ExtResource("9_jpvwg")
expand_margin_left = 80.0
expand_margin_top = 40.0
expand_margin_right = 30.0
expand_margin_bottom = 60.0

[sub_resource type="LabelSettings" id="LabelSettings_2etp1"]
font = ExtResource("10_h2lnq")
font_size = 18
shadow_size = 0

[node name="StoryMapScene" type="Control" node_paths=PackedStringArray("parallax_layers") groups=["Savable"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nmkcg")
script = ExtResource("1_5v7n8")
edge_node_prototype = ExtResource("3_4e1f5")
default_node_prototype = ExtResource("2_udjio")
unknown_node_prototype = ExtResource("4_cestf")
incomplete_level_material = ExtResource("5_8dcih")
margins = Vector2(20, 150)
min_edge_length = 20.0
max_edge_length = 30.0
edge_dir_max_count = Vector2i(3, 7)
parallax_layers = [NodePath("GridBG"), NodePath("LevelNodesContainer")]
parallax_amount = -0.18
parallax_layer_factor = -0.06

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.730913, 0.730913, 0.730913, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_464bj")

[node name="PulseModulate" parent="Background" instance=ExtResource("7_y8rqc")]

[node name="MouseHighlight" type="PointLight2D" parent="."]
position = Vector2(1056, 512)
energy = 1.25
blend_mode = 2
range_item_cull_mask = 3
shadow_enabled = true
shadow_filter = 2
texture = SubResource("GradientTexture2D_2etp1")
height = 256.0

[node name="MouseFollower" type="Node2D" parent="MouseHighlight"]
script = ExtResource("7_464bj")

[node name="GridBG" type="TextureRect" parent="."]
texture_repeat = 2
layout_mode = 1
anchors_preset = -1
offset_left = -2024.0
offset_top = -944.0
offset_right = 2848.0
offset_bottom = 1672.0
texture = ExtResource("7_px7av")
expand_mode = 1
stretch_mode = 1

[node name="StoryTooltips" type="Control" parent="." node_paths=PackedStringArray("sequence")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_left = 664.0
offset_top = 596.0
offset_right = 728.0
offset_bottom = 612.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("10_eclf1")
script = ExtResource("6_8dcih")
sequence = [NodePath("Tooltip")]

[node name="Tooltip" type="HBoxContainer" parent="StoryTooltips"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -412.5
offset_right = 412.5
offset_bottom = 23.0
grow_horizontal = 2

[node name="Description" type="Label" parent="StoryTooltips/Tooltip"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_eclf1")
autowrap_mode = 3

[node name="ApplyTypewriterEffect" parent="StoryTooltips/Tooltip/Description" instance=ExtResource("12_5yfjk")]

[node name="LevelNodesContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = 32.0
offset_right = -41.0
offset_bottom = 118.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_y8rqc")

[node name="AttributeLabels" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HealthHUD" parent="Panel/AttributeLabels" instance=ExtResource("7_b87u6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="Panel/AttributeLabels/HealthHUD" index="0"]
text = "Health:"
label_settings = SubResource("LabelSettings_2etp1")

[node name="Value" parent="Panel/AttributeLabels/HealthHUD" index="1"]
text = ""
label_settings = SubResource("LabelSettings_2etp1")

[node name="PersonnelHUD" parent="Panel/AttributeLabels" instance=ExtResource("7_b87u6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="Panel/AttributeLabels/PersonnelHUD" index="0"]
text = "Personnel:"
label_settings = SubResource("LabelSettings_2etp1")

[node name="Value" parent="Panel/AttributeLabels/PersonnelHUD" index="1"]
text = ""
label_settings = SubResource("LabelSettings_2etp1")

[node name="ScrapHUD" parent="Panel/AttributeLabels" instance=ExtResource("7_b87u6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="Panel/AttributeLabels/ScrapHUD" index="0"]
text = "Scrap:"
label_settings = SubResource("LabelSettings_2etp1")

[node name="Value" parent="Panel/AttributeLabels/ScrapHUD" index="1"]
text = ""
label_settings = SubResource("LabelSettings_2etp1")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NextButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
flat = true

[node name="StoryRunCountLabel" parent="." instance=ExtResource("16_8olf0")]
layout_mode = 0

[node name="AutoNarrative" parent="." instance=ExtResource("7_mer82")]
unique_name_in_owner = true

[node name="RadioStatic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2etp1")
volume_db = -3.0
autoplay = true
bus = &"UI"

[connection signal="pressed" from="Buttons/NextButton" to="." method="_on_next_button_pressed"]

[editable path="Panel/AttributeLabels/HealthHUD"]
[editable path="Panel/AttributeLabels/PersonnelHUD"]
[editable path="Panel/AttributeLabels/ScrapHUD"]
